If an object is in two collections and I do a full copy of scene things go bad #51780

Closed
opened 2017-06-12 14:49:13 +02:00 by Dalai Felinto · 8 comments

Short description of error
Depsgraph shows some warnings when an object is in two collections, and I make a full copy of the scene. And it crashes when closing Blender.

Exact steps for others to reproduce the error

Depsgraph warnings: P490
Segfault with ASAN on exit: P492

**Short description of error** Depsgraph shows some warnings when an object is in two collections, and I make a full copy of the scene. And it crashes when closing Blender. **Exact steps for others to reproduce the error** * Open: [shared-collection.blend](https://archive.blender.org/developer/F628306/shared-collection.blend) * Create a new scene with the "Full Copy" option Depsgraph warnings: [P490](https://archive.blender.org/developer/P490.txt) Segfault with ASAN on exit: [P492](https://archive.blender.org/developer/P492.txt)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2017-06-12 14:49:49 +02:00
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Owner

To reproduce it without the file:

./blender -b --python-expr "import bpy;bpy.context.scene.master_collection.collections.new('My Collection').objects.link(bpy.data.objects['Cube']);bpy.ops.scene.new(type='FULL_COPY');"

This shows the depsgraph warnings, but it doesn't crash on exit.

To reproduce it without the file: ``` ./blender -b --python-expr "import bpy;bpy.context.scene.master_collection.collections.new('My Collection').objects.link(bpy.data.objects['Cube']);bpy.ops.scene.new(type='FULL_COPY');" ``` This shows the depsgraph warnings, but it doesn't crash on exit.
Author
Owner

Another way of testing the depsgraph warnings, which may (or may not) be related:

Copy P493 to a local place (e.g., /tmp/python.py)

./blender -b --python /tmp/python.py

This script is not even copying the entire scene.

Another way of testing the depsgraph warnings, which may (or may not) be related: Copy [P493](https://archive.blender.org/developer/P493.txt) to a local place (e.g., /tmp/python.py) ``` ./blender -b --python /tmp/python.py ``` This script is not even copying the entire scene.

This issue was referenced by 8ca497b911

This issue was referenced by 8ca497b9117c1a094ba34246c813a35508bc2ee8
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

The asan crash on exit was fixed on 109447d008.

The asan crash on exit was fixed on 109447d008.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51780
No description provided.